--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "restaurant-page-odin",
+  "name": "weather-app-odin",
   "version": "1.0.0",
-  "description": "restaurant page for odin project",
+  "description": "Simple weather app using Visual Crossing API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
